# codejam2016

./: codejam2016.cabal
app/: Main.hs
data/: A-small-attempt0.out  B-small-attempt0.out  C-small-attempt0.out  D-small-attempt1.out
data/qualification/: A-small-attempt0.in  B-small-attempt0.in  C-large.out
data/round1a/: A-large.in  A-large.out  A-small-attempt0.in
src/: A.hs  B.hs  C.hs  D.hs
src/Qualification/: A.hs  B.hs  C.hs  D.hs
src/Round1A/: A.hs  B.hs
