name:                codejam2016
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/purcell/codejam2016#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     A, B, C
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.6.2
                     , primes >= 0.2.1
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable codejam2016-run
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , codejam2016
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/purcell/codejam2016
